# CmakeTP

./: .gitignore  CMakeLists.txt
A/: preparing.py
B/: CMakeLists.txt  Makefile  cmake_install.cmake  lib.cpp  lib.h
C/: main.cpp
